abovevtt.css
/* ... */
.dead:after {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

#combat_tracker {
    position: fixed;
    height: 450px;
    left: 5px;
    top: 40px;
    z-index: 56000;
}

.tracker-dm {
    width: 200px;
}

.tracker-player {
    width: 150px;
}

#campaign_banner {
    border: 1px dashed #1b9af0;
    margin-top: 50px;
    margin-bottom: 50px;
    padding: .5rem;
}

#campaign_banner a{
	color: #1b9af0;
}

#patreons {
	padding-top:10px;
    font-size: 8px;

   -webkit-column-count: 8;
      -moz-column-count: 8;
           column-count: 8;

   -webkit-column-gap: 20px;
      -moz-column-gap: 20px;
           column-gap: 20px;
}

.patreons-title{
	font-size: 11px;
	font-weight:bold;
}

.player-card {
    box-shadow: 0 8px 16px -8px rgb(0 0 0 / 40%);
    background: linear-gradient(#e6e6e6, #fff);
    border-radius: 6px;
    margin: 10px;
    padding: 5px;
}

.player-card-header {
    display: flex;
    justify-content: space-between;
}

.player-name {
    font-variant: small-caps;
    font-size: 17px;
    width: 160px;
}

.player-actions {
    display: flex;
    align-items: center;
}

.player-card-content {
    display: flex;
    margin: 10px 5px;
}

.player-info {
    display: flex;
    width: 100%;
    margin: 0 10px;
}

.player-attributes {
    width: 60px;
    display: flex;
    flex-wrap: wrap;
    max-height: 70px;
    flex-direction: column;
    justify-content: space-between;
}

.player-attribute {
    display: flex;
    align-items: center;
}

.player-attribute > img {
    width: 16px;
    margin-right: 10px;
}

.player-no-attributes {
    display: flex;
    justify-content: center;
    width: 100%;
    align-items: center;
}

.player-conditions {
    max-width: 155px;
    padding-left: 15px;
}

.player-see-more {
    text-align: center;
}

.player-see-more img {
    cursor: pointer;
    width: 20px;
    transition: transform 0.3s ease-in-out;
}

.player-see-more img.reverse {
    transform: rotate(180deg);
}

.player-card-footer {
    display: flex;
    justify-content: space-evenly;
    overflow: hidden;
    max-height: 0px;
    transition: all 0.5s ease-in-out;
}

.player-card-footer.show {
    max-height: 80px;
}

.player-token {
    position: relative;
    border-radius: 50%;
    height: 70px;
}

.player-token img {
    border-radius: 50%;
}

.player-token > div {
    font-size: 10px;
}

.player-token-hp {
    background: #FF7777;
    position: absolute;
    top: 56px;
    left: 1px;
    padding: 0 3px;
}

.player-token-ac {
    position: absolute;
    top: 54px;
    border: 1px solid black;
    background: white;
    border-radius: 50%;
    width: 16px;
    text-align: center;
    left: 51px;
}

.ability_value {
    display: inline-block;
    width: 44px;
    padding: 5px;
    text-align: center;
    border:solid 2px #AE0404;
    position: relative;
    border-radius: 15px 25px 125px 25px/15px 225px 15px 255px;
    height: 60px;
    margin: 10px 0;
}

.ability_name {
    color: darkgrey;
    font-weight: bold;
}

.ability_modifier {
    font-size: 18px;
    margin-top: -2px;
}

.ability_score {
    position: absolute;
    bottom: -10px;
    border-radius: 50%;
    border: 1px solid #AE0404;
    width: 25px;
    background: #fff;
    left: calc(20px / 2);
    height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.add-party-container {
    padding: 10px;
    text-align: right;
}

.token.ui-draggable-disabled {
    cursor: default;
}

.token .condition-img {
    padding: 0;
    margin: 0;
    background: #01ffff;
    border: 1px solid black;
    border-radius: 50%;
}

.token .custom-condition.condition-img {
    background: #F58231;
}

.token .note-condition.condition-img {
    background: #e4c700;
}


.tokenselected::before{
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 0px;
    padding: 5px;
    border: 5px #c0f3fff5 solid;
    z-index: 0;
}

.tokenselected.ui-draggable-disabled::before{
    border: 5px #f7bfbfd5 solid
}


.ac {
    position: absolute;
}

.color-reminder {
    display: inline-block;
    width:85%;
}

.conditions {
    padding: 0;
    margin: 0;
    top: 0;
    position: absolute;
    z-index: 5;
}

.dnd-condition {
    cursor: pointer;
}

.hpbar {
    z-index: 3;
}
/* Classes for main buttons on campaign page */
.above-vtt-content-div {
    display: inline-block;
    margin-top: 15px;
    border-style: solid;
    border-width: 1px;
    border-color: #1b9af0
}

.above-vtt-right-margin-5px {
    margin-right:5px;
}

.above-vtt-logo {

    display: inline-block;
    margin-left:5px;
    padding-top:15px;
    padding-bottom:15px;
}

.above-vtt-campaignscreen-blue-button {
    color:white;
    background:#1b9af0;
}

.above-vtt-campaignscreen-black-button {
    color:white;
    background:black;
}

.above-vtt-campaignscreen-white-button {
    cursor: pointer;
    color:#1b9af0;
    background:white;
}

.sidebar__inner {
    position: relative;
}

/* .ct-sidebar__controls, */
.sidebar__controls {
    position: relative;
    margin: 0 !important;
    z-index: 20;
    /* width: 340px; moved to init_ui */
}

/*.sidebar__controls.player {
    left: -206px;
}*/

/* .ct-sidebar__pane-content, */
.sidebar__pane-content {
    position: absolute;
    right: 0;
    top: 28px;
}

.ddbc-tab-list__nav-item {
    display: flex;
    border-bottom: 3px solid transparent;
    color: #838383;
    font-size: 14px;
    font-family: Roboto Condensed,Roboto,Helvetica,sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    cursor: pointer;
}
.ddbc-tab-list__nav-item--is-active {
    border-bottom-color: #c53131;
    color: #000;
}
.selected-tab img.ddbc-tab-list__nav-item--is-active,
.selected-tab svg.ddbc-tab-list__nav-item--is-active {
    width: 90%;
    margin: auto;
}
/* ... */

